# tor-chat-app

./: .env.example  .env.prod.example  .gitignore  1  ANDROID_REDESIGN_PLAN.md  CHANGELOG.md  CI_CD_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  FEATURES_ADDED_SESSION.md  FEDERATION_PLAN.md  GITHUB_ACTIONS_BUILD_FIX_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE6_BUILD_STATUS.md  PHASE6_FINAL_SUMMARY.md  PRD.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START_ZERO_LOGGING.md  README.md  SECURITY.md  SETUP.md  TOR_USAGE.md  ZERO_LOGGING.md  docker-compose-build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  progress.txt  quickstart.sh  setup.sh  show-onion-addresses.sh  update.sh  (+1 more)
.claude/: settings.local.json
.claude/agents/: devops-expert.md  expert-developer.md  tor-integration-expert.md
.github/: CI_CD_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ANDROID-WORKFLOWS-SUMMARY.md  README-ANDROID-KMP.md  SIGNING-SETUP-GUIDE.md  WORKFLOW-DIAGRAM.md  android-build.yml  android-kmp-build.yml  android-kmp-release.yml  backend-ci.yml  code-quality.yml  desktop-build.yml  dioxus-desktop.yml  dioxus-web.yml  docker-build-push.yml  flutter-android.yml  release.yml  rust-backend.yml  tor.yml  web-ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_create_users.sql  002_create_rooms.sql  003_create_messages.sql  004_create_room_members.sql
backend/src/: config.rs  error.rs
backend/src/database/: migrations.rs  mod.rs
backend/src/models/: message.rs  room.rs  room_member.rs  user.rs
dioxus-desktop/: Cargo.toml  tor-chat-desktop.desktop
dioxus-desktop/src/: main.rs  tor_manager.rs
dioxus-web/: Cargo.toml  Dockerfile  index.html
dioxus-web/src/: api.rs  main.rs  models.rs  socket.rs
dioxus-web/src/components/: message_bubble.rs  mod.rs  room_list_item.rs
dioxus-web/src/pages/: admin.rs  chat.rs  login.rs  mod.rs  register.rs
dioxus-web/src/state/: auth.rs  mod.rs
dioxus-web/src/utils/: mod.rs  storage.rs
flutter-app/: pubspec.yaml
flutter-app/android/: build.gradle  key.properties  local.properties
flutter-app/android/app/: build.gradle  release-keystore.jks
flutter-app/android/app/src/main/: AndroidManifest.xml
flutter-app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
flutter-app/android/app/src/main/kotlin/com/torchat/app/: MainActivity.kt
flutter-app/android/app/src/main/res/xml/: file_paths.xml
flutter-app/lib/: main.dart
flutter-app/lib/components/: message_bubble.dart  message_input.dart
flutter-app/lib/models/: message.dart  room.dart  user.dart
flutter-app/lib/providers/: auth_provider.dart
flutter-app/lib/screens/: admin_rooms_screen.dart  admin_screen.dart  admin_users_screen.dart  chat_screen.dart  loading_screen.dart  login_screen.dart  register_screen.dart  room_list_screen.dart  server_config_screen.dart  settings_screen.dart
flutter-app/lib/services/: api_service.dart  crypto_service.dart  file_service.dart  notification_service.dart  socket_service.dart  storage_service.dart  tor_service.dart  update_service.dart
flutter-app/test/: widget_test.dart
rust-backend/: .env.example  Cargo.toml  Dockerfile
rust-backend/migrations/: 001_create_users.sql  002_create_rooms.sql  003_create_messages.sql  004_create_room_members.sql
rust-backend/src/: config.rs  database.rs  error.rs  main.rs  state.rs
rust-backend/src/middleware/: auth.rs  mod.rs  validation.rs
rust-backend/src/models/: message.rs  mod.rs  room.rs  room_member.rs  user.rs
rust-backend/src/routes/: admin.rs  auth.rs  mod.rs  rooms.rs  tor.rs  upload.rs
rust-backend/src/services/: auth.rs  crypto.rs  mod.rs  tor.rs
rust-backend/src/socket/: handlers.rs
scripts/: verify-zero-logging.sh
tor/: Dockerfile  entrypoint.sh  torrc
