[package]
name = "tor-chat-backend"
version = "0.2.0"
edition = "2021"
authors = ["TOR Chat Team"]
description = "Secure TOR chat backend server in Rust"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit"] }

# Socket.IO
socketioxide = { version = "0.13", features = ["state"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Encryption
sodiumoxide = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TOR
tokio-socks = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# File upload
bytes = "1.5"

# HTTP client (for link preview, TOR verification)
reqwest = { version = "0.11", features = ["json", "socks"] }

# HTML parsing (for link preview)
scraper = "0.18"

# Rate limiting
tower-governor = "0.4"

# Environment
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
