[package]
name = "tor-chat-desktop"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }

# Shared web code
tor-chat-web = { path = "../dioxus-web" }

# Desktop-specific
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
