[package]
name = "tor-chat-desktop"
version = "0.2.0"
edition = "2021"

[dependencies]
# Dioxus desktop framework
dioxus = { version = "0.7", features = ["desktop", "router"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "socks"] }

# WebSocket
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data types
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Local storage
directories = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.5"

# Embedded Tor
arti-client = { version = "0.39", features = ["tokio", "onion-service-client"] }
tor-rtcompat = { version = "0.39", features = ["tokio"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
