[package]
name = "tor-chat-web"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-web = "0.7"
dioxus-router = "0.5"
dioxus-signals = "0.5"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
gloo-net = { version = "0.5", features = ["websocket"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Crypto - using WASM-compatible alternatives
# libsodium-sys-stable doesn't support WASM compilation
# Using Web Crypto API through web-sys instead

# Utilities
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
base64 = "0.22"
tracing = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
