[package]
name = "tor-chat-web"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-signals = "0.7"

# HTTP Client
reqwest = { version = "0.13", features = ["json", "multipart"] }
gloo-net = { version = "0.6", features = ["websocket"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "HtmlInputElement",
    "File",
    "FileList",
    "FormData",
    "Blob",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Regex for URL parsing
regex = { version = "1.11", default-features = false, features = ["unicode-perl"] }

# Utilities
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.21", features = ["v4", "serde", "js"] }
base64 = "0.22"
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
