[package]
name = "tor-chat-backend"
version = "0.2.0"
edition = "2021"
authors = ["TOR Chat Team"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit", "timeout"] }

# Socket.IO
socketioxide = { version = "0.18", features = ["state"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"], default-features = false }

# Authentication & Security
jsonwebtoken = "10.3"
bcrypt = "0.18"
sodiumoxide = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TOR
tokio-socks = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.19"
bytes = "1.5"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.13", features = ["json", "socks"] }
scraper = "0.25"

[profile.release]
opt-level = 3
lto = true
strip = true
